--- a/Frontend Projects/03-Personal Portfolio/style.css
+++ b/Frontend Projects/03-Personal Portfolio/style.css
@@ -13,6 +13,16 @@ a:hover {
   color: darkgreen;
 }
 
+h1,
+h2 {
+  font-family: "Permanent Marker", sans-serif;
+  font-weight: normal;
+}
+
+body {
+  height: 100vh;
+}
+
 /* header */
 header {
   padding: 15px;
@@ -20,8 +30,14 @@ header {
   justify-content: space-between;
 }
 
+.logo h2 {
+  font-family: "Edu AU VIC WA NT Pre", sans-serif;
+}
+
 header nav {
+  display: flex;
   justify-content: flex-end;
+  position: relative;
 }
 
 header nav ul {
@@ -45,6 +61,8 @@ main {}
 }
 
 .title h1 {
+
+  font-weight: 500;
   margin-bottom: 15px;
   text-align: center;
 }
@@ -56,6 +74,7 @@ main {}
 
 .sections {
   display: flex;
+  width: 100%;
   border-top: 2px solid #000;
 }
 
@@ -64,40 +83,47 @@ main {}
 }
 
 section {
+  display: flex;
+  flex-direction: column;
   flex: 1;
-  padding: 25px;
+  padding: 20px;
   border: 2px solid #000;
-
 }
 
 section h2 {
+  font-weight: 400;
   margin-bottom: 20px;
   text-align: center;
 }
 
 .projects {
-  padding: 25px 0;
-}
-
-.projects ul {
-  display: flex;
-  flex-direction: column;
+  padding: 20px 0;
   justify-content: space-between;
 }
 
-.projects li {
+.projects a {
   /* flex: 1; */
-  padding: 10px;
+  padding: 10px 40px;
   border-bottom: 1px solid #000;
   font-size: 18px;
 }
 
-.projects li:last-child {
+.projects a:last-child {
   border-bottom: none;
 }
 
+.workExperience {
+  padding: 20px 0;
+}
+
 .work {
+  padding: 10px 40px;
   margin-bottom: 20px;
+  border-bottom: 1px solid #000;
+}
+
+.work:last-child {
+  border-bottom: none;
 }
 
 .work h3 {
@@ -106,4 +132,72 @@ section h2 {
   margin-bottom: 15px;
 }
 
+.work p {
+  margin-bottom: 15px;
+}
+
+.work a {
+  color: #0052b6
+}
+
+.education li {
+  list-style-type: '- ';
+  margin: 10px;
+}
+
+/* reviews */
+.reviews h2 {
+  padding: 30px;
+}
+
+.reviewFlex {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.review {
+  min-height: 200px;
+  width: 500px;
+  padding: 25px;
+  align-content: center;
+  font-size: 20px;
+  border: 2px solid #000;
+  border-radius: 20px;
+}
+
+.review footer {
+  margin: 10px 0;
+  color: #c9c9c9
+}
+
 /* footer */
+.footer {
+  padding: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+}
+
+.footer p {
+  font-family: "Permanent Marker", sans-serif;
+  font-weight: 300;
+  margin: 10px;
+}
+
+/* 屏幕宽度小于 768px 时，调整布局 */
+@media (max-width: 768px) {
+  header nav ul {
+    display: block;
+    text-align: center;
+  }
+
+  header nav ul li {
+    padding: 10px 0;
+  }
+
+  .footer {
+    padding: 40px;
+  }
+}
